refact: fix tags selector. Rule 3.4. Part 3

--- a/style.css
+++ b/style.css
@@ -141,13 +141,13 @@ input#new-task {
   width: 226px;
 }
 
-button.delete img {
+.image-delete {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.image-delete:hover {
   transform: rotateZ(0);
 }
 
