refact: fix tags selector. Rule 3.4. Part 4

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ input#new-task {
 }
 
 /* Completed */
-ul#completed-tasks label {
+.completed-tasks-container label {
   text-decoration: line-through;
   color: #888;
 }
