--- a/style.css
+++ b/style.css
@@ -40,8 +40,9 @@
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.add-task__wrapper {
   display: flex;
+  margin: 20px 0 0;
 }
 
 .list-container {
@@ -105,7 +106,7 @@ input[type="text"]:focus {
 /* New Task */
 label[for="new-task"] {
   display: block;
-  margin: 0 0 20px;
+
 }
 
 input#new-task {
