refact:add BEM. Rule 2.1

--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@
   text-align: right;
 }
 
-.header .header__image {
+.header__image {
   width: 100%;
 }
 
-.header .header__link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
